--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "xslx_tools",
-  "version": "0.0.1",
+  "name": "xslx-tools",
+  "version": "0.0.2",
   "description": "Helper module for creating and parsing xlsx files, based on xlsx",
   "main": "index.js",
   "dependencies": {
