--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xslx-tools",
+  "name": "xlsx-tools",
   "version": "0.0.2",
   "description": "Helper module for creating and parsing xlsx files, based on xlsx",
   "main": "index.js",
