dep: xlsx fork by inspirationlabs
Adding support for basic formulae.

Signed-off-by: Alexander Knapstein <alexander.knapstein@inspirationlabs.com>

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "xlsx-tools",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Helper module for creating and parsing xlsx files, based on xlsx",
   "main": "index.js",
   "dependencies": {
-    "xlsx": ">=0.0.1",
+    "xlsx": "git+https://github.com/INSPIRATIONlabs/js-xlsx.git",
     "lodash": ">=0.0.1"
   },
   "scripts": {
