--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "xlsx-tools",
   "version": "0.0.5",
   "description": "Helper module for creating and parsing xlsx files, based on xlsx",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "typings": "dist/index",
   "dependencies": {
     "xlsx": "git+https://github.com/INSPIRATIONlabs/js-xlsx.git",
     "lodash": ">=0.0.1"
