--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,1 +1,10 @@
-{}
+{
+    "compilerOptions": {
+        "target": "es6",
+        "module": "commonjs",
+        "preserveConstEnums": true,
+        "removeComments": true,
+        "declaration": true,
+        "outDir":  "dist/"
+    }
+}
