--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "xlsx-tools",
-  "version": "0.0.5",
+  "name": "@inspirationlabs/xlsx-tools",
+  "version": "0.0.6",
   "description": "Helper module for creating and parsing xlsx files, based on xlsx",
   "main": "dist/index.js",
   "typings": "dist/index",
   "dependencies": {
-    "xlsx": "git+https://github.com/INSPIRATIONlabs/js-xlsx.git",
+    "@inspirationlabs/js-xlsx": "0.8.0",
     "lodash": ">=0.0.1"
   },
   "scripts": {
@@ -18,5 +18,8 @@
     "molecuel"
   ],
   "author": "Alexander Knapstein",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^9.4.6"
+  }
 }
